--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "Libre Baskerville", serif;
+  font-family: "Noto Serif", serif;
   font-size: 16px;
   position: relative;
   margin-top: 0px;
@@ -11,11 +11,13 @@ body {
 }
 
 h2 {
-  margin-block-start: 2em;
-  margin-block-end: 1em;
+  font-family: "Noto Sans", sans-serif;
+  margin-block-start: 3em;
+  margin-block-end: 0.5em;
 }
 h3 {
-  margin-block-start: 1em;
+  font-family: "Noto Sans", sans-serif;
+  margin-block-start: 1.5em;
   margin-block-end: 0.5em;
 }
 
