--- a/public/style.css
+++ b/public/style.css
@@ -24,6 +24,7 @@ h4 {
   font-family: "Noto Sans", sans-serif;
   margin-block-start: 1em;
   margin-block-end: 0.5em;
+  font-style: italic;
 }
 
 hr {
